--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -147,6 +147,10 @@ Angst:
     WiM:
     - end: 118
       start: 111
+Anklang:
+  references:
+    GA 65:
+    - whole: true
 Anspruch:
   references:
     GA 29/30:
@@ -1108,7 +1112,7 @@ DK 28 B3:
     GA 40:
     - start: 145
       suffix: ff
-    GA 7:
+    VA:
     - start: 237
   type: w
 DK 28 B6:
@@ -1136,7 +1140,7 @@ DK 28 B8 34:
     - start: 147
 DK 28 B8 34-41:
   references:
-    GA 7:
+    VA:
     - start: 237
 Da-sein:
   parent: Dasein
@@ -1624,6 +1628,10 @@ Enthüllen:
   references:
     TK:
     - start: 7
+Entmachtung:
+  references:
+    GA 45:
+    - start: 195
 Entschlossenheit:
   references:
     GA 29/30:
@@ -1681,11 +1689,23 @@ Erschlossenheit:
     SZ:
     - end: 137
       start: 135
+Erschrecken:
+  references:
+    GA 45:
+    - start: 197
+    GA 65:
+    - start: 15
+  related:
+  - Erstaunen
 Erstaunen:
   references:
     GA 45:
     - end: 180
       start: 177
+    - start: 195
+    VA:
+    - start: 266
+    - start: 286
 Eschatologie des Seins:
   references:
     SA:
@@ -2175,6 +2195,10 @@ Grundverhältnis:
     - start: 400
   related:
   - Grundverhalten
+Gründung:
+  references:
+    GA 65:
+    - whole: true
 Gute Antwort:
   author: Hebel, Johann Peter
   parent: Schatzkästlein des rheinischen Hausfreundes
@@ -2815,6 +2839,8 @@ Letztes:
     - start: 3
 Lichtung:
   references:
+    GA 45:
+    - start: 209
     GA 55:
     - start: 17
     WD:
@@ -3768,6 +3794,13 @@ Rheinknie:
     HF:
     - start: 133
   type: g
+Richtigkeit:
+  references:
+    GA 45:
+    - start: 203
+    TK:
+    - end: 7
+      start: 6
 Rickert, Heinrich:
   metadata:
     gnd: '118600605'
@@ -3932,6 +3965,10 @@ Schelling, Friedrich von:
     GA 1:
     - start: 56
   type: p
+Scheu:
+  references:
+    GA 65:
+    - start: 15
 Schicksal:
   references:
     GA 29/30:
@@ -4009,6 +4046,8 @@ Seiende im Ganzen:
     - start: 52
     - start: 82
     - start: 85
+    GA 45:
+    - start: 209
     W:
     - start: 190
     WBPh:
@@ -4248,6 +4287,8 @@ Sprechen:
     - start: 55
 Sprung:
   references:
+    GA 65:
+    - whole: true
     SvG:
     - start: 166
 Spur:
@@ -4719,6 +4760,10 @@ Verhalten:
   references:
     SZ:
     - start: 4
+Verhaltenheit:
+  references:
+    GA 65:
+    - start: 15
 Vernehmen:
   references:
     GA 29/30:
@@ -5216,6 +5261,14 @@ Zukunft:
     GA 16:
     - start: 574
     - start: 575
+Zukünftigen:
+  references:
+    GA 65:
+    - whole: true
+Zuspiel:
+  references:
+    GA 65:
+    - whole: true
 Zuspruch:
   references:
     SvG:
@@ -5497,6 +5550,10 @@ ja-und-nein-sagen:
   references:
     G:
     - start: 527
+letste Gott:
+  references:
+    GA 65:
+    - whole: true
 menschliche Dasein:
   parent: Dasein
   references:
@@ -5658,11 +5715,6 @@ religio:
   references:
     GA 55:
     - start: 13
-richtig:
-  references:
-    TK:
-    - end: 7
-      start: 6
 sterben:
   references:
     SvG:
