Correct GA 45 title

--- a/index/works.yml
+++ b/index/works.yml
@@ -277,7 +277,7 @@ GA 55:
   title: Heraklit
   type: book
 GA 45:
-  title: Grundfragen der Philosophie. Ausgewählte 'Probleme' der 'Logik'
+  title: Grundfragen der Philosophie. Ausgewählte ‘Probleme’ der ‘Logik’
   title-short: Grundfragen der Philosophie
   author:
     - family: Heidegger
