Add GA 101 to `Der Feldweg`

--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -1392,6 +1392,8 @@ Der Feldweg:
     - start: 517
     GA 1:
     - start: 55
+    GA 101:
+    - start: 28
     GA 16:
     - start: 487
   type: w
